fix(style): three rows of social icons on small screens

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -274,7 +274,6 @@ a.zola-anchor {
     flex-wrap: wrap;
     justify-content: center;
     margin: 0 auto;
-    max-width: 450px;
     li {
       text-align: center;
       vertical-align: middle;
@@ -829,6 +828,12 @@ a.zola-anchor {
 }
 
 @media screen and (max-width: 640px) {
+  .main-info,
+  .about-info {
+    ul {
+      grid-template-rows: repeat(3, auto);
+    }
+  }
   nav.nav-bar {
     left: 50%;
     right: unset;
